# fastapi_p21

./: .gitignore  README.md  TODO  bank_uz.py  config.py  main.py  pyproject.toml  test_main.http
apps/: admin.py  middlewares.py
apps/models/: __init__.py  categories.py  database.py  products.py  users.py
apps/routers/: __init__.py  auth.py  generate.py  routers.py  users.py
apps/utils/: authentication.py
templates/apps/: user-detail.html  user-list.html
templates/apps/product/: product-detail.html  product-list.html  product-list1.html
